apps_v1_deployment_blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blog
  name: blog
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - image: git2.riper.fr/ztec/blog:main-2056
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 2
          periodSeconds: 3
        name: nginx
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 2
          periodSeconds: 3
        resources:
          limits:
            cpu: "0.001"
            memory: 10Mi
          requests:
            cpu: "0.001"
            memory: 2Mi
      imagePullSecrets:
      - name: git2.riper.fr-key
