v1_service_blog.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blog
  name: blog
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: blog
  type: NodePort
